--- a/register.html
+++ b/register.html
@@ -84,12 +84,11 @@
         <label><input id="agree" name="agree" type="checkbox" required> Погоджуюсь з <a href="rules.html" target="_blank" rel="noopener">регламентом</a> *</label>
       </div>
 
-      <!-- PAYWALL START -->
+      <!-- PAYWALL -->
       <div class="paywall">
         <p id="payStatus" class="hint">Щоб зареєструватись, спочатку оплатіть внесок.</p>
         <button id="payButton" class="btn btn--primary" type="button">Оплатити внесок</button>
       </div>
-      <!-- PAYWALL END -->
 
       <div class="form-actions">
         <button id="submitBtn" type="submit" class="btn btn--primary">Надіслати заявку</button>
@@ -105,105 +104,103 @@
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp">YouTube</a>
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh" rel="noopener">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp" rel="noopener">YouTube</a>
     </div>
   </div>
 </footer>
 
 <!-- 💳 POPUP ОПЛАТИ -->
-<div id="paymentModal" class="modal">
+<div id="paymentModal" class="modal" aria-hidden="true" role="dialog" aria-modal="true">
   <div class="modal-content">
-    <span class="close">&times;</span>
+    <button type="button" class="close" aria-label="Закрити">&times;</button>
     <h2>💳 Оплата реєстраційного внеску</h2>
     <p>Сума внеску: <strong>1500 ₴</strong></p>
     <p>Кошти надходять організатору <strong>Роман Д.</strong><br>Решта оплачується під час жеребкування.</p>
 
     <div class="buttons">
-      <a href="https://send.monobank.ua/7U9RD9ypvQ" target="_blank" class="mono">💜 Monobank</a>
-      <a href="https://next.privat24.ua/money-transfer/card?amount=1500&receiver=4874070050688793" target="_blank" class="privat">💚 Приват24</a>
+      <a href="https://send.monobank.ua/7U9RD9ypvQ" target="_blank" rel="noopener" class="mono">💜 Monobank</a>
+      <a href="https://next.privat24.ua/money-transfer/card?amount=1500&receiver=4874070050688793" target="_blank" rel="noopener" class="privat">💚 Приват24</a>
     </div>
 
     <div class="qr-block">
-      <img src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https://send.monobank.ua/7U9RD9ypvQ" alt="QR Monobank">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https://send.monobank.ua/7U9RD9ypvQ" width="180" height="180" alt="QR Monobank">
       <p class="qr-text">Скануй для оплати через Monobank</p>
     </div>
   </div>
 </div>
 
+<!-- СТИЛІ МОДАЛКИ (без backdrop-filter) -->
 <style>
-/* === POPUP стиль із ефектом преміум і QR === */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  inset: 0;
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(6px);
-  animation: fadeInBg 0.4s ease;
+.modal{
+  display:none;
+  position:fixed;
+  inset:0;
+  z-index:9999;
+  background:rgba(0,0,0,.75); /* стабільне затемнення на Android */
+  justify-content:center;
+  align-items:center;
 }
-.modal-content {
-  position: relative;
-  background: linear-gradient(145deg, #0f0f0f, #1a1a1a);
-  border: 2px solid #ffcc00;
-  color: #fff;
-  padding: 28px 25px 35px;
-  border-radius: 18px;
-  max-width: 400px;
-  width: 90%;
-  text-align: center;
-  box-shadow: 0 0 35px rgba(255,204,0,0.3);
-  transform: scale(0.9);
-  animation: popupShow 0.35s forwards ease;
+.modal.open{ display:flex; }         /* показ через клас */
+body.modal-open{ overflow:hidden; }  /* блокуємо скрол фону */
+
+.modal-content{
+  position:relative;
+  background:#111;
+  border:2px solid #ffcc00;
+  color:#fff;
+  padding:28px 25px 35px;
+  border-radius:18px;
+  max-width:400px;
+  width:90%;
+  text-align:center;
+  box-shadow:0 0 25px rgba(255,204,0,.3);
 }
-@keyframes fadeInBg { from { opacity: 0; } to { opacity: 1; } }
-@keyframes popupShow { from { opacity: 0; transform: scale(0.8); } to { opacity: 1; transform: scale(1); } }
-.modal-content h2 { margin-top: 0; color: #ffcc00; font-size: 1.3rem; text-transform: uppercase; }
-.modal-content .buttons a {
-  display: block; margin: 12px 0; padding: 14px;
-  border-radius: 12px; font-weight: 600; text-decoration: none;
-  color: #fff; transition: all 0.25s ease; font-size: 1rem;
+.modal-content h2{ margin:0 0 10px; color:#ffcc00; text-transform:uppercase; font-size:1.2rem; }
+.buttons a{
+  display:block; margin:12px 0; padding:14px; border-radius:12px; font-weight:600;
+  text-decoration:none; color:#fff; transition:transform .2s, box-shadow .2s;
 }
-.modal-content .buttons .mono {
-  background: linear-gradient(90deg, #6f42c1, #9b59b6);
-  box-shadow: 0 0 10px rgba(155,89,182,0.5);
+.buttons .mono{ background:linear-gradient(90deg,#6f42c1,#9b59b6); box-shadow:0 0 10px rgba(155,89,182,.5); }
+.buttons .mono:hover{ transform:scale(1.03); box-shadow:0 0 18px rgba(155,89,182,.8); }
+.buttons .privat{ background:linear-gradient(90deg,#1aa64c,#28d16d); box-shadow:0 0 10px rgba(40,209,109,.5); }
+.buttons .privat:hover{ transform:scale(1.03); box-shadow:0 0 18px rgba(40,209,109,.8); }
+
+.qr-block{ margin-top:18px; }
+.qr-block img{ border:2px solid #ffcc00; border-radius:10px; box-shadow:0 0 10px rgba(255,204,0,.4); }
+.qr-text{ font-size:.9rem; color:#ccc; margin-top:8px; }
+
+.close{
+  position:absolute; top:10px; right:18px;
+  font-size:28px; line-height:1; cursor:pointer; color:#aaa; background:none; border:none;
 }
-.modal-content .buttons .mono:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0 18px rgba(155,89,182,0.8);
-}
-.modal-content .buttons .privat {
-  background: linear-gradient(90deg, #1aa64c, #28d16d);
-  box-shadow: 0 0 10px rgba(40,209,109,0.5);
-}
-.modal-content .buttons .privat:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0 18px rgba(40,209,109,0.8);
-}
-.qr-block { margin-top: 20px; }
-.qr-block img {
-  width: 180px; height: 180px;
-  border: 2px solid #ffcc00; border-radius: 10px;
-  box-shadow: 0 0 10px rgba(255,204,0,0.4);
-}
-.qr-text { font-size: 0.9rem; color: #ccc; margin-top: 8px; }
-.close {
-  position: absolute; top: 10px; right: 18px;
-  font-size: 28px; cursor: pointer; color: #aaa; transition: 0.3s;
-}
-.close:hover { color: #fff; transform: scale(1.1); }
+.close:hover{ color:#fff; }
 </style>
 
+<!-- ЛОГІКА МОДАЛКИ -->
 <script>
-const modal = document.getElementById("paymentModal");
-const btn = document.getElementById("payButton");
-const closeBtn = document.querySelector(".close");
-btn.addEventListener("click", () => modal.style.display = "flex");
-closeBtn.addEventListener("click", () => modal.style.display = "none");
-window.onclick = (e) => { if (e.target === modal) modal.style.display = "none"; };
+  const modal    = document.getElementById('paymentModal');
+  const openBtn  = document.getElementById('payButton');
+  const closeBtn = modal.querySelector('.close');
+
+  function openModal(){
+    modal.classList.add('open');
+    document.body.classList.add('modal-open');
+    modal.setAttribute('aria-hidden','false');
+  }
+  function closeModal(){
+    modal.classList.remove('open');
+    document.body.classList.remove('modal-open');
+    modal.setAttribute('aria-hidden','true');
+  }
+
+  openBtn.addEventListener('click', openModal);
+  closeBtn.addEventListener('click', closeModal);
+  modal.addEventListener('click', (e)=>{ if(e.target===modal) closeModal(); });
+  document.addEventListener('keydown', (e)=>{ if(e.key==='Escape' && modal.classList.contains('open')) closeModal(); });
 </script>
 
+<!-- Твоя логіка платежів/валідації -->
 <script src="assets/js/payments.js"></script>
 </body>
 </html>
