--- a/register.html
+++ b/register.html
@@ -123,9 +123,13 @@
     <p>Кошти надходять організатору <strong>Роман Д.</strong><br>Решта оплачується під час жеребкування.</p>
 
     <div class="buttons">
-      <a href="https://send.monobank.ua/7U9RD9ypvQ" target="_blank" rel="noopener" class="mono">💜 Monobank</a>
-      <a href="https://next.privat24.ua/money-transfer/card?amount=1500&receiver=4874070050688793" target="_blank" rel="noopener" class="privat">💚 Приват24</a>
-    </div>
+  <a href="https://send.monobank.ua/7U9RD9ypvQ" target="_blank" rel="noopener" class="mono">
+    💜 Оплатити 1500 ₴ (Monobank)
+  </a>
+  <a href="https://next.privat24.ua/money-transfer/card?amount=1500&receiver=4874070050688793" target="_blank" rel="noopener" class="privat">
+    💚 Оплатити 1500 ₴ (Приват24)
+  </a>
+</div>
 
     <div class="qr-block">
       <img src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https://send.monobank.ua/7U9RD9ypvQ" width="180" height="180" alt="QR Monobank">
