Fix payment links and update QR code text
Updated payment links and QR code text for Monobank.

--- a/register.html
+++ b/register.html
@@ -116,7 +116,7 @@
 
     <div class="buttons">
       <!-- ФІКСОВАНА СУМА 1500 ДЛЯ ОБОХ КНОПОК -->
-      <a href="https://send.monobank.ua/jar/7U9RD9ypvQ?amount=1500"
+      <a href="https://send.monobank.ua/7U9RD9ypvQ?amount=1500"
          target="_blank" rel="noopener noreferrer" class="mono">
         💜 Оплатити 1500 ₴ (Monobank)
       </a>
@@ -129,9 +129,9 @@
     <div class="qr-block">
       <!-- Той самий Monobank-лінк із сумою, але в QR -->
       <img
-        src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https%3A%2F%2Fsend.monobank.ua%2Fjar%2F7U9RD9ypvQ%3Famount%3D1500"
+        src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https%3A%2F%2Fsend.monobank.ua%2F7U9RD9ypvQ%3Famount%3D1500"
         width="180" height="180" alt="QR Monobank (1500 ₴)" />
-      <p class="qr-text">Скануй для оплати через Monobank</p>
+      <p class="qr-text">Скануй для оплати 1500 ₴ через Monobank</p>
     </div>
   </div>
 </div>
