Update payment information in register.html

--- a/register.html
+++ b/register.html
@@ -119,8 +119,8 @@
   <div class="modal-content">
     <button type="button" class="close" aria-label="Закрити">&times;</button>
     <h2>💳 Оплата реєстраційного внеску</h2>
-    <p>Сума внеску: <strong>1500 ₴</strong></p>
-    <p>Кошти надходять організатору <strong>Роман Д.</strong><br />Решта оплачується під час жеребкування.</p>
+    <p>Частина внеску: <strong>1500 ₴</strong></p>
+    <p>Кошти надходять організаторам <strong>Осінній короп</strong><br />Решта оплачується під час жеребкування.</p>
 
     <div class="buttons">
       <a href="https://send.monobank.ua/7U9RD9ypvQ?amount=1500"
